2009-09-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/rinside_sample4.cpp: New example based on new r-devel post

2009-09-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increase Version: to 0.1.1

	* inst/THANKS: Added new file to say Thank You! to contributors

	* inst/examples/Makefile: set R_HOME variable to output of 'R RHOME',
	  use R_HOME to call R as R_HOME/bin/R, use R instead of Rscript,
	  query R about CXX and CPPFLAGS, general editing and overhaul

	* inst/examples/*.cpp: More consistent formatting using Emacs 'M-x untabify'

	* src/Makefile: Add $R_ARCH to install path for header files (thanks to
	  Jeff), call R with --vanilla switch (thanks to Jan), use R instead
	  of Rscript, general editing and overhaul

2009-09-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increase Version: to 0.1.0, initial CRAN release

	* DESCRIPTION: Add 'OS_type: unix' to stop builds on Windows

	* DESCRIPTION: Add 'URL' pointer

	* doxyfile: Added Doxygen configuration file
	* inst/doc/: Added Doxygen generated html, latex, man files

	* inst/examples/Makefile: Also link against BLAS and LAPACK libs
	* inst/examples/rinside_sample3.cpp: New example using lm() and coef()

	* inst/examples/rinside_sample2.cpp: Added a try/catch block

	* src/Makefile: use $(R_HOME)/bin/R as per Kurt's reminder

2009-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makefile: Enhanced to now automatically regenerate the two
	  R-derived header files, and to also query R for directories which
	  should make the build more portable across different systems

	* src/MemBuf/cpp: Switch error message from fprintf to std::cerr
	  to avoid unncessary trouble with g++-4.4, with thanks to
	  Michael Kane for the heads-up

	* R/RInsidePaths.R: Added path helper functions called by Makefiles
	* NAMESPACE: Added (empty) file so we can call 'path helpers'

	* inst/examples/Makefile: Rewritten to no longer used fixed path
	  settings but rather query R, Rcpp and RInside
